fixed overflow

--- a/resume/src/styles/Home.module.css
+++ b/resume/src/styles/Home.module.css
@@ -406,7 +406,15 @@
     transform: none;
   }
 }
-
+.mobileStepper
+{
+  display: none;
+}
+#titleText
+{
+  width: "100%";
+  text-align: left;
+}
 
 /* Mobile */
 @media (max-width: 700px) {
@@ -418,6 +426,19 @@
   {
     display:none
   }
+  .mobileStepper
+  {
+    display: block;
+  }
+  .webStepper
+{
+  display: none;
+}
+#titleText
+{
+  width: "100%";
+  text-align: center;
+}
 
   .container .content{
     /* height: 100px; */
